syntax = "proto3";

option go_package="restful/restful";

package restful;

service Restful {
    rpc Get (GetRequest) returns (GetResponse);
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc Update (UpdateRequest) returns (UpdateResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
    int64 id = 1;
}

message CreateRequest {
    int64 id = 1;
    string title = 2;
    string status = 3;
}

message UpdateRequest {
    int64 id = 1;
    string title = 2;
    string status = 3;
}

message DeleteRequest {
    int64 id = 1;
}

message GetResponse {
    int64 id = 1;
    string title = 2;
    string status = 3;
}

message CreateResponse {
    string status = 1;
}

message UpdateResponse {
    string status = 1;
}

message DeleteResponse {
    string status = 1;
}